--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,15 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
     <title>Ohmyfood.com</title>
-</head>
-
-<body>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
 
+</head>
+
+<body>
+    
     <header class="header">
         <div class="header_logo_container"></div>
             <img class="header_logo" src="logo.png" alt="logo_ohmyfood" />
@@ -26,15 +27,17 @@
 
     </header>
 
-    <form class="explorer">
+    <section class="explorer">
 
-        <h2>Réservez le menu qui vous convient</h2>
-        <p class="explorer_texte_1">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-        <p class="explorer_texte_2">Explorez nos restaurants</p>
-    </form>
+        <h2 class="explorer_title">Réservez le menu qui vous convient</h2>
+        <p class="explorer_content">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+        <div class="explorer_button">Explorez nos restaurants
 
-    <div class="fonctionnement_section">
-        <h3>fonctionnement</h3>
+        </div>
+    </section>
+
+    <section class="fonctionnement_section">
+        <h2>fonctionnement</h2>
 
         <div class="fonctionnements">
 
@@ -63,10 +66,10 @@
                 <span>Dégustez au restaurant</span>
             </a>
         </div>
-    </div>
+    </section>
 
     <section class="restaurants">
-        <h3>Restaurants</h3>
+        <h2>Restaurants</h2>
 
         <div class="restaurants_articles">
 
@@ -77,7 +80,7 @@
                         <span>La palette du goût</span>
                         <p>Ménilmontant</p>
                         <div class="coeur_button">
-                            <img class="restaurant_article_etoile" src="icone/heart-regular.svg" alt="heart">
+                            <img class="restaurant_article_coeur" src="icone/heart-regular.svg" alt="heart">
                         </div>
                     </figcaption>
                 </figure>
@@ -92,7 +95,7 @@
                         <span>La note enchantée</span>
                         <p>Charonne</p>
                         <div class="coeur_button">
-                            <img class="restaurant_article_etoile" src="icone/heart-regular.svg" alt="heart">
+                            <img class="restaurant_article_coeur" src="icone/heart-regular.svg" alt="heart">
                         </div>
                     </figcaption>
                 </figure>
@@ -106,7 +109,7 @@
                         <span>À la française</span>
                         <p>Cité rouge</p>
                         <div class="coeur_button">
-                            <img class="restaurant_article_etoile" src="icone/heart-regular.svg" alt="heart">
+                            <img class="restaurant_article_coeur" src="icone/heart-regular.svg" alt="heart">
                         </div>
                     </figcaption>
                 </figure>
@@ -121,7 +124,7 @@
                         <span>Le délice des sens</span>
                         <p>Folie-Méricourt</p>
                         <div class="coeur_button">
-                            <img class="restaurant_article_etoile" src="icone/heart-regular.svg" alt="heart">
+                            <img class="restaurant_article_coeur" src="icone/heart-regular.svg" alt="heart">
                         </div>
                     </figcaption>
                 </figure>
