--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,14 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
     <title>Ohmyfood.com</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="">
 </head>
 
 <body>
-    
+
     <header class="header">
         <div class="header_logo_container"></div>
-            <img class="header_logo" src="logo.png" alt="logo_ohmyfood" />
+        <img class="header_logo" src="logo.png" alt="logo_ohmyfood" />
         </div>
 
         <div class="map">
@@ -37,7 +33,7 @@
     </section>
 
     <section class="fonctionnement_section">
-        <h2>fonctionnement</h2>
+        <h2 class="fonctionnement_title">fonctionnement</h2>
 
         <div class="fonctionnements">
 
@@ -47,7 +43,7 @@
                 <div class="fonctionnement_icone">
                     <img src="icone/mobile-alt-solid.svg" alt="icone_mobile">
                 </div>
-                <span>Choisissez un restaurant</span>
+                <span class="fonctionnement_texte">Choisissez un restaurant</span>
             </a>
 
             <a class="fonctionnement" href="#">
@@ -55,7 +51,7 @@
                 <div class="fonctionnement_icone">
                     <img src="icone/bars-solid.svg" alt="icone_bars">
                 </div>
-                <span>Composez votre menu</span>
+                <span class="fonctionnement_texte">Composez votre menu</span>
             </a>
 
             <a class="fonctionnement" href="#">
@@ -63,13 +59,13 @@
                 <div class="fonctionnement_icone">
                     <img src="icone/store-solid.svg" alt="icone_store">
                 </div>
-                <span>Dégustez au restaurant</span>
+                <span class="fonctionnement_texte">Dégustez au restaurant</span>
             </a>
         </div>
     </section>
 
     <section class="restaurants">
-        <h2>Restaurants</h2>
+        <h2 class="restaurants_title">Restaurants</h2>
 
         <div class="restaurants_articles">
 
@@ -136,27 +132,20 @@
 
 
     <footer class="footer">
-        <div class="container_footer">
-            <div class="row">
+        <img class="footer_logo" src="logo.png" alt="logo_ohmyfood">
+       
+        <ul class="footer_texte">
+            <img src="couvert" alt="">
+            <li><a href="#">Proposer un restaurant</a></li>
+            <li><a href="#">Devenir partenaire</a></li>
+        </ul>
 
-                <div class="footer_col">
-                    <img src="logo.png" alt="logo_ohmyfood">
-                    <ul>
-                        <img src="couvert" alt="">
-                        <li><a href="#">Proposer un restaurant</a></li>
-                        <img src="partenaire" alt="">
-                        <li><a href="#">Devenir partenaire</a></li>
-                    </ul>
-
-                    <ul>
-                        <li><a href="#">Mentions légales</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-
-            </div>
-        </div>
+        <ul class="footer_texte">
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
     </footer>
+
 
 </body>
 
