--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 
 
             <a class="fonctionnement" href="#">
-                <p>1</p>
+                <p class="fonctionnement_rond">1</p>
                 <div class="fonctionnement_icone">
                     <img src="icone/mobile-alt-solid.svg" alt="icone_mobile">
                 </div>
@@ -47,7 +47,7 @@
             </a>
 
             <a class="fonctionnement" href="#">
-                <p>2</p>
+                <p class="fonctionnement_rond">2</p>
                 <div class="fonctionnement_icone">
                     <img src="icone/bars-solid.svg" alt="icone_bars">
                 </div>
@@ -55,7 +55,7 @@
             </a>
 
             <a class="fonctionnement" href="#">
-                <p>3</p>
+                <p class="fonctionnement_rond">3</p>
                 <div class="fonctionnement_icone">
                     <img src="icone/store-solid.svg" alt="icone_store">
                 </div>
