page 1er restaurant

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 
 
             <a class="fonctionnement" href="#">
-                <p class="fonctionnement_rond">1</p>
+
                 <div class="fonctionnement_icone">
                     <img src="icone/mobile-alt-solid.svg" alt="icone_mobile">
                 </div>
@@ -47,7 +47,7 @@
             </a>
 
             <a class="fonctionnement" href="#">
-                <p class="fonctionnement_rond">2</p>
+
                 <div class="fonctionnement_icone">
                     <img src="icone/bars-solid.svg" alt="icone_bars">
                 </div>
@@ -55,7 +55,7 @@
             </a>
 
             <a class="fonctionnement" href="#">
-                <p class="fonctionnement_rond">3</p>
+
                 <div class="fonctionnement_icone">
                     <img src="icone/store-solid.svg" alt="icone_store">
                 </div>
@@ -69,7 +69,7 @@
 
         <div class="restaurants_articles">
 
-            <a class="restaurant_article" href="#">
+            <a class="restaurant_article" href="la_palette_du_gout.html">
                 <figure class="restaurant_article_conteneur">
                     <img class="restaurant_article_image" src="images/jay-wennington.jpg" alt="jay-wennington">
                     <figcaption class="restaurant_article_contenu">
@@ -133,7 +133,7 @@
 
     <footer class="footer">
         <img class="footer_logo" src="logo.png" alt="logo_ohmyfood">
-       
+
         <ul class="footer_texte">
             <img src="couvert" alt="">
             <li><a href="#">Proposer un restaurant</a></li>
