--- a/public/a_la_francaise.html
+++ b/public/a_la_francaise.html
@@ -7,14 +7,6 @@
     <link rel="stylesheet" href="style.css" />
     <title>Ohmyfood.com</title>
     <link rel="stylesheet" href="">
-    <style>
-        .test {
-            width: 200px;
-            height: 200px;
-            border: 1px solid black;
-            background-image: var(--image);
-        }
-    </style>
 </head>
 
 <body class="body-restaurent">
@@ -23,16 +15,15 @@
         <div class="header_logo_container"></div>
         <img class="header_logo" src="logo.png" alt="logo_ohmyfood" />
         </div>
+
     </header>
-    <div class="test" style="--image: url(image/jay-wennington-N_Y88TWmGwA-unsplash.jpg);"></div>
 
 
-
-    <section data-background-image="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="carte_restaurant_container1">
+    <section data-background-image="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="carte_restaurant_container3">
         <div class="carte_restaurant">
 
             <div class="coeur_button_carte">
-                <h2 class="carte_title">La palette du goût</h2>
+                <h2 class="carte_title">À la française</h2>
                 <img class="carte_article_coeur" src="icone/heart-regular.svg" alt="heart">
             </div>
 
@@ -46,18 +37,12 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Fricassée d'escargot</span>
+                    <span class="carte_article_title">Tarte de poulpe acidulé</span>
 
-                    <p class="carte_article_description"> Aux pimet d'espelette</p>
+                    <p class="carte_article_description"> Aux zests d'orange</p>
                     <p class="carte_article_price">25€</p>
-
                     <div class="carte_article_checkbox">
                     </div>
-
-                    <div >
-                    <img class="image_article_checkbox" src="icone/icone_valide.png" alt="icone_valide">
-                </div>
-
                 </article>
 
             </div>
@@ -67,9 +52,9 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Foie gras de canard mi-cuit</span>
+                    <span class="carte_article_title">Velouté de légumes d'antan</span>
 
-                    <p class="carte_article_description"> Et ses copeaux de truffe noire</p>
+                    <p class="carte_article_description"> Carotte, panais, topinambour</p>
                     <p class="carte_article_price">35€</p>
                     <div class="carte_article_checkbox">
                     </div>
@@ -82,9 +67,9 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Oeuf au plat</span>
+                    <span class="carte_article_title">Soupe à l'oignon</span>
 
-                    <p class="carte_article_description"> Assaisoné à la truffe sur lit de</p>
+                    <p class="carte_article_description"> Revisitée</p>
                     <p class="carte_article_price">20€</p>
                     <div class="carte_article_checkbox">
                     </div>
@@ -108,9 +93,9 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Filet de boeuf aux herbes</span>
+                    <span class="carte_article_title">Coquilles Saint-Jacques</span>
 
-                    <p class="carte_article_description"> Accompagnée de sa ribambelle de légumes</p>
+                    <p class="carte_article_description"> Accompagnée d'une purée de panais'</p>
                     <p class="carte_article_price">40€</p>
                     <div class="carte_article_checkbox">
                     </div>
@@ -123,9 +108,9 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Parmentier de queue de boeuf</span>
+                    <span class="carte_article_title">Magret de canard</span>
 
-                    <p class="carte_article_description"> À la truffe noire sur sa purée de panais</p>
+                    <p class="carte_article_description"> Et parmentier de pommes de terres</p>
                     <p class="carte_article_price">35€</p>
                     <div class="carte_article_checkbox">
                     </div>
@@ -138,9 +123,9 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Filet de Turbot</span>
+                    <span class="carte_article_title">Pigeonneau d'ille-et-Vilaine</span>
 
-                    <p class="carte_article_description">Aux agrumes</p>
+                    <p class="carte_article_description">Sur son lit de gnocchis aux légumes</p>
                     <p class="carte_article_price">44€</p>
                     <div class="carte_article_checkbox">
                     </div>
@@ -162,9 +147,9 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Paris-Brest</span>
+                    <span class="carte_article_title">Pétales de violettes glacés</span>
 
-                    <p class="carte_article_description">Revisité</p>
+                    <p class="carte_article_description">Et purée de noisettes</p>
                     <p class="carte_article_price">18€</p>
                     <div class="carte_article_checkbox">
                     </div>
@@ -177,9 +162,9 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Macaron au chocolat d'exception</span>
+                    <span class="carte_article_title">Fondant au chocolat</span>
 
-                    <p class="carte_article_description"> Et glace à la vanille de Madagascar</p>
+                    <p class="carte_article_description"> Revisité</p>
                     <p class="carte_article_price">22€</p>
                     <div class="carte_article_checkbox">
                     </div>
@@ -192,9 +177,9 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Mousse au chocolat</span>
+                    <span class="carte_article_title">Millefeuille croustillant</span>
 
-                    <p class="carte_article_description"> Au piment d'espelette et à la truffe noire</p>
+                    <p class="carte_article_description"> Myrtilles et pâte d'amande</p>
                     <p class="carte_article_price">23€</p>
                     <div class="carte_article_checkbox">
                     </div>
