--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="">
 </head>
 
-<body>
+<body class="body_home">
 
     <header class="header">
         <div class="header_logo_container"></div>
@@ -83,7 +83,7 @@
             </a>
 
 
-            <a class="restaurant_article" href="#">
+            <a class="restaurant_article" href="la_note_enchantee.html">
                 <figure class="restaurant_article_conteneur">
                     <img class="restaurant_article_image" src="images/stil-u2Lp8tXIcjw-unsplash.jpg"
                         alt="jay-wennington">
@@ -97,7 +97,7 @@
                 </figure>
             </a>
 
-            <a class="restaurant_article" href="#">
+            <a class="restaurant_article" href="a_la_francaise.html">
                 <figure class="restaurant_article_conteneur">
                     <img class="restaurant_article_image" src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                         alt="jay-wennington">
@@ -112,7 +112,7 @@
             </a>
 
 
-            <a class="restaurant_article" href="#">
+            <a class="restaurant_article" href="le_delice_des_sens.html">
                 <figure class="restaurant_article_conteneur">
                     <img class="restaurant_article_image"
                         src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="jay-wennington">
