--- a/public/la_note_enchantee.html
+++ b/public/la_note_enchantee.html
@@ -7,14 +7,6 @@
     <link rel="stylesheet" href="style.css" />
     <title>Ohmyfood.com</title>
     <link rel="stylesheet" href="">
-    <style>
-        .test {
-            width: 200px;
-            height: 200px;
-            border: 1px solid black;
-            background-image: var(--image);
-        }
-    </style>
 </head>
 
 <body class="body-restaurent">
@@ -23,16 +15,15 @@
         <div class="header_logo_container"></div>
         <img class="header_logo" src="logo.png" alt="logo_ohmyfood" />
         </div>
+
     </header>
-    <div class="test" style="--image: url(image/jay-wennington-N_Y88TWmGwA-unsplash.jpg);"></div>
 
 
-
-    <section data-background-image="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="carte_restaurant_container1">
+    <section data-background-image="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="carte_restaurant_container2">
         <div class="carte_restaurant">
 
             <div class="coeur_button_carte">
-                <h2 class="carte_title">La palette du goût</h2>
+                <h2 class="carte_title">La note enchantée</h2>
                 <img class="carte_article_coeur" src="icone/heart-regular.svg" alt="heart">
             </div>
 
@@ -46,18 +37,12 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Fricassée d'escargot</span>
+                    <span class="carte_article_title">Ravioles de foie gras</span>
 
-                    <p class="carte_article_description"> Aux pimet d'espelette</p>
+                    <p class="carte_article_description"> Accompagnés de leur crème à la truffe</p>
                     <p class="carte_article_price">25€</p>
-
                     <div class="carte_article_checkbox">
                     </div>
-
-                    <div >
-                    <img class="image_article_checkbox" src="icone/icone_valide.png" alt="icone_valide">
-                </div>
-
                 </article>
 
             </div>
@@ -67,9 +52,9 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Foie gras de canard mi-cuit</span>
+                    <span class="carte_article_title">Caviar osciètre</span>
 
-                    <p class="carte_article_description"> Et ses copeaux de truffe noire</p>
+                    <p class="carte_article_description"> Sur blini à la farine de blé noir</p>
                     <p class="carte_article_price">35€</p>
                     <div class="carte_article_checkbox">
                     </div>
@@ -82,10 +67,25 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Oeuf au plat</span>
+                    <span class="carte_article_title">Homard et espuma de</span>
 
-                    <p class="carte_article_description"> Assaisoné à la truffe sur lit de</p>
+                    <p class="carte_article_description"> Mariné aux zestes d'orange</p>
                     <p class="carte_article_price">20€</p>
+                    <div class="carte_article_checkbox">
+                    </div>
+                </article>
+
+            </div>
+
+
+            <div class="cartes_articles">
+
+                <article class="carte_article">
+
+                    <span class="carte_article_title">Foie gras de canard cuit entier</span>
+
+                    <p class="carte_article_description"> Confiture de figue et pain toasté</p>
+                    <p class="carte_article_price">35€</p>
                     <div class="carte_article_checkbox">
                     </div>
                 </article>
@@ -108,9 +108,9 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Filet de boeuf aux herbes</span>
+                    <span class="carte_article_title">Noix de coquilles Saint-Jacques</span>
 
-                    <p class="carte_article_description"> Accompagnée de sa ribambelle de légumes</p>
+                    <p class="carte_article_description"> Sur lit de purée de céleri-rave</p>
                     <p class="carte_article_price">40€</p>
                     <div class="carte_article_checkbox">
                     </div>
@@ -123,9 +123,9 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Parmentier de queue de boeuf</span>
+                    <span class="carte_article_title">Langoustine poêlée</span>
 
-                    <p class="carte_article_description"> À la truffe noire sur sa purée de panais</p>
+                    <p class="carte_article_description"> Purée de patate douce</p>
                     <p class="carte_article_price">35€</p>
                     <div class="carte_article_checkbox">
                     </div>
@@ -138,9 +138,9 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Filet de Turbot</span>
+                    <span class="carte_article_title">Mijoté de queue de boeuf</span>
 
-                    <p class="carte_article_description">Aux agrumes</p>
+                    <p class="carte_article_description">Et riz sauvage aux zestes de citron</p>
                     <p class="carte_article_price">44€</p>
                     <div class="carte_article_checkbox">
                     </div>
@@ -162,9 +162,9 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Paris-Brest</span>
+                    <span class="carte_article_title">Macaron noisette et chocolat</span>
 
-                    <p class="carte_article_description">Revisité</p>
+                    <p class="carte_article_description">Glace au caramel brun et sel de Guérande</p>
                     <p class="carte_article_price">18€</p>
                     <div class="carte_article_checkbox">
                     </div>
@@ -177,9 +177,9 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Macaron au chocolat d'exception</span>
+                    <span class="carte_article_title">Baba au rhum revisité</span>
 
-                    <p class="carte_article_description"> Et glace à la vanille de Madagascar</p>
+                    <p class="carte_article_description"> Avec son coulis de citron</p>
                     <p class="carte_article_price">22€</p>
                     <div class="carte_article_checkbox">
                     </div>
@@ -192,9 +192,9 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Mousse au chocolat</span>
+                    <span class="carte_article_title">Tarte au citron meringuée</span>
 
-                    <p class="carte_article_description"> Au piment d'espelette et à la truffe noire</p>
+                    <p class="carte_article_description"> Déstructurée</p>
                     <p class="carte_article_price">23€</p>
                     <div class="carte_article_checkbox">
                     </div>
