--- a/public/index.html
+++ b/public/index.html
@@ -71,13 +71,15 @@
 
             <a class="restaurant_article" href="la_palette_du_gout.html">
                 <figure class="restaurant_article_conteneur">
-                    <img class="restaurant_article_image" src="images/jay-wennington.jpg" alt="jay-wennington">
+                    <img class="restaurant_article_image" src="images/la_palette_du_gout.jpg" alt="jay-wennington">
                     <figcaption class="restaurant_article_contenu">
                         <span>La palette du goût</span>
                         <p>Ménilmontant</p>
+                        <div class="coeur_article_checkbox">
                         <div class="coeur_button">
                             <img class="restaurant_article_coeur" src="icone/heart-regular.svg" alt="heart">
                         </div>
+                    </div>
                     </figcaption>
                 </figure>
             </a>
@@ -85,7 +87,7 @@
 
             <a class="restaurant_article" href="la_note_enchantee.html">
                 <figure class="restaurant_article_conteneur">
-                    <img class="restaurant_article_image" src="images/stil-u2Lp8tXIcjw-unsplash.jpg"
+                    <img class="restaurant_article_image" src="images/la_note_enchantee.jpg"
                         alt="jay-wennington">
                     <figcaption class="restaurant_article_contenu">
                         <span>La note enchantée</span>
@@ -99,7 +101,7 @@
 
             <a class="restaurant_article" href="a_la_francaise.html">
                 <figure class="restaurant_article_conteneur">
-                    <img class="restaurant_article_image" src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                    <img class="restaurant_article_image" src="images/a_la_francaise.jpg"
                         alt="jay-wennington">
                     <figcaption class="restaurant_article_contenu">
                         <span>À la française</span>
@@ -115,7 +117,7 @@
             <a class="restaurant_article" href="le_delice_des_sens.html">
                 <figure class="restaurant_article_conteneur">
                     <img class="restaurant_article_image"
-                        src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="jay-wennington">
+                        src="images/les_delice_des_sens.jpg" alt="jay-wennington">
                     <figcaption class="restaurant_article_contenu">
                         <span>Le délice des sens</span>
                         <p>Folie-Méricourt</p>
