--- a/public/la_note_enchantee.html
+++ b/public/la_note_enchantee.html
@@ -6,7 +6,11 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
     <title>Ohmyfood.com</title>
-    <link rel="stylesheet" href="">
+    <style>
+        :root{
+            --restaurant_background_image: url(images/la_note_enchantee.jpg);
+        }
+    </style>
 </head>
 
 <body class="body-restaurent">
@@ -19,7 +23,7 @@
     </header>
 
 
-    <section data-background-image="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="carte_restaurant_container2">
+    <section class="carte_restaurant_container">
         <div class="carte_restaurant">
 
             <div class="coeur_button_carte">
@@ -37,12 +41,17 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Ravioles de foie gras</span>
+                    <div class="carte_article_content">
+                        <span class="carte_article_title">Ravioles de foie gras</span>
+                        <p class="carte_article_description"> Accompagnés de leur crème à la truffe </p>
+                    </div>
 
-                    <p class="carte_article_description"> Accompagnés de leur crème à la truffe</p>
                     <p class="carte_article_price">25€</p>
+
                     <div class="carte_article_checkbox">
+                        <img class="image_article_checkbox" src="icone/icone_valide.png" alt="icone_valide">
                     </div>
+
                 </article>
 
             </div>
@@ -51,12 +60,15 @@
             <div class="cartes_articles">
 
                 <article class="carte_article">
+                    <div class="carte_article_content">
+                        <span class="carte_article_title">Caviar osciètre</span>
+                        <p class="carte_article_description"> Sur blini à la farine de blé noir</p>
+                    </div>
 
-                    <span class="carte_article_title">Caviar osciètre</span>
-
-                    <p class="carte_article_description"> Sur blini à la farine de blé noir</p>
                     <p class="carte_article_price">35€</p>
+
                     <div class="carte_article_checkbox">
+                        <img class="image_article_checkbox" src="icone/icone_valide.png" alt="icone_valide">
                     </div>
                 </article>
 
@@ -66,32 +78,36 @@
             <div class="cartes_articles">
 
                 <article class="carte_article">
+                    <div class="carte_article_content">
+                        <span class="carte_article_title">Homard et espuma de ...</span>
+                        <p class="carte_article_description"> Mariné aux zests d'orange</p>
+                    </div>
 
-                    <span class="carte_article_title">Homard et espuma de</span>
-
-                    <p class="carte_article_description"> Mariné aux zestes d'orange</p>
                     <p class="carte_article_price">20€</p>
+
                     <div class="carte_article_checkbox">
+                        <img class="image_article_checkbox" src="icone/icone_valide.png" alt="icone_valide">
                     </div>
                 </article>
 
             </div>
-
 
             <div class="cartes_articles">
 
                 <article class="carte_article">
+                    <div class="carte_article_content">
+                        <span class="carte_article_title">Foie gras de canard cuit entier</span>
+                        <p class="carte_article_description"> Confiture de figue et pain toasté</p>
+                    </div>
 
-                    <span class="carte_article_title">Foie gras de canard cuit entier</span>
-
-                    <p class="carte_article_description"> Confiture de figue et pain toasté</p>
                     <p class="carte_article_price">35€</p>
+
                     <div class="carte_article_checkbox">
+                        <img class="image_article_checkbox" src="icone/icone_valide.png" alt="icone_valide">
                     </div>
                 </article>
 
             </div>
-
 
 
 
@@ -107,13 +123,16 @@
             <div class="cartes_articles">
 
                 <article class="carte_article">
-
-                    <span class="carte_article_title">Noix de coquilles Saint-Jacques</span>
-
-                    <p class="carte_article_description"> Sur lit de purée de céleri-rave</p>
+                    <div class="carte_article_content">
+                        <span class="carte_article_title">Noix de coquilles Saint-Jacques</span>
+                        <p class="carte_article_description"> Sur lit de purée de céleri-rave</p>
+                    </div>
                     <p class="carte_article_price">40€</p>
+
                     <div class="carte_article_checkbox">
+                        <img class="image_article_checkbox" src="icone/icone_valide.png" alt="icone_valide">
                     </div>
+
                 </article>
 
             </div>
@@ -122,12 +141,15 @@
             <div class="cartes_articles">
 
                 <article class="carte_article">
-
-                    <span class="carte_article_title">Langoustine poêlée</span>
-
-                    <p class="carte_article_description"> Purée de patate douce</p>
+                    <div class="carte_article_content">
+                        <span class="carte_article_title">Langoustine poêlée</span>
+                        <p class="carte_article_description"> Purée de patate douce</p>
+                    </div>
                     <p class="carte_article_price">35€</p>
+
+
                     <div class="carte_article_checkbox">
+                        <img class="image_article_checkbox" src="icone/icone_valide.png" alt="icone_valide">
                     </div>
                 </article>
 
@@ -137,12 +159,15 @@
             <div class="cartes_articles">
 
                 <article class="carte_article">
-
+                    <div class="carte_article_content">
                     <span class="carte_article_title">Mijoté de queue de boeuf</span>
+                    <p class="carte_article_description">Et riz sauvage aux zests de citron</p>
+                    </div>
 
-                    <p class="carte_article_description">Et riz sauvage aux zestes de citron</p>
                     <p class="carte_article_price">44€</p>
+
                     <div class="carte_article_checkbox">
+                        <img class="image_article_checkbox" src="icone/icone_valide.png" alt="icone_valide">
                     </div>
                 </article>
 
@@ -161,12 +186,14 @@
             <div class="cartes_articles">
 
                 <article class="carte_article">
-
-                    <span class="carte_article_title">Macaron noisette et chocolat</span>
-
+                    <div class="carte_article_content">
+                    <span class="carte_article_title">Macaron noisette de chocolat</span>
                     <p class="carte_article_description">Glace au caramel brun et sel de Guérande</p>
+                    </div>
                     <p class="carte_article_price">18€</p>
+
                     <div class="carte_article_checkbox">
+                        <img class="image_article_checkbox" src="icone/icone_valide.png" alt="icone_valide">
                     </div>
                 </article>
 
@@ -177,11 +204,13 @@
 
                 <article class="carte_article">
 
+                    <div class="carte_article_content">
                     <span class="carte_article_title">Baba au rhum revisité</span>
-
                     <p class="carte_article_description"> Avec son coulis de citron</p>
+                    </div>
                     <p class="carte_article_price">22€</p>
                     <div class="carte_article_checkbox">
+                        <img class="image_article_checkbox" src="icone/icone_valide.png" alt="icone_valide">
                     </div>
                 </article>
 
@@ -192,11 +221,15 @@
 
                 <article class="carte_article">
 
-                    <span class="carte_article_title">Tarte au citron meringuée</span>
-
+                    <div class="carte_article_content">
+                    <span class="carte_article_title">Tatre au citron meringuée</span>
                     <p class="carte_article_description"> Déstructurée</p>
+                    </div>
+                    
                     <p class="carte_article_price">23€</p>
+
                     <div class="carte_article_checkbox">
+                        <img class="image_article_checkbox" src="icone/icone_valide.png" alt="icone_valide">
                     </div>
                 </article>
 
