avant dernier commit

--- a/public/index.html
+++ b/public/index.html
@@ -76,10 +76,12 @@
                         <span>La palette du goût</span>
                         <p>Ménilmontant</p>
                         <div class="coeur_article_checkbox">
-                        <div class="coeur_button">
-                            <img class="restaurant_article_coeur" src="icone/heart-regular.svg" alt="heart">
+                            <div class="coeur_button">
+                                <img class="restaurant_article_coeur" src="icone/heart-regular.svg" alt="heart">
+                                <img class="restaurant_article_coeur-plein" src="icone/heart-solid.svg"
+                                    alt="coeur rose">
+                            </div>
                         </div>
-                    </div>
                     </figcaption>
                 </figure>
             </a>
@@ -87,13 +89,16 @@
 
             <a class="restaurant_article" href="la_note_enchantee.html">
                 <figure class="restaurant_article_conteneur">
-                    <img class="restaurant_article_image" src="images/la_note_enchantee.jpg"
-                        alt="jay-wennington">
+                    <img class="restaurant_article_image" src="images/la_note_enchantee.jpg" alt="jay-wennington">
                     <figcaption class="restaurant_article_contenu">
                         <span>La note enchantée</span>
                         <p>Charonne</p>
-                        <div class="coeur_button">
-                            <img class="restaurant_article_coeur" src="icone/heart-regular.svg" alt="heart">
+                        <div class="coeur_article_checkbox">
+                            <div class="coeur_button">
+                                <img class="restaurant_article_coeur" src="icone/heart-regular.svg" alt="heart">
+                                <img class="restaurant_article_coeur-plein" src="icone/heart-solid.svg"
+                                    alt="coeur rose">
+                            </div>
                         </div>
                     </figcaption>
                 </figure>
@@ -101,13 +106,16 @@
 
             <a class="restaurant_article" href="a_la_francaise.html">
                 <figure class="restaurant_article_conteneur">
-                    <img class="restaurant_article_image" src="images/a_la_francaise.jpg"
-                        alt="jay-wennington">
+                    <img class="restaurant_article_image" src="images/a_la_francaise.jpg" alt="jay-wennington">
                     <figcaption class="restaurant_article_contenu">
                         <span>À la française</span>
                         <p>Cité rouge</p>
-                        <div class="coeur_button">
-                            <img class="restaurant_article_coeur" src="icone/heart-regular.svg" alt="heart">
+                        <div class="coeur_article_checkbox">
+                            <div class="coeur_button">
+                                <img class="restaurant_article_coeur" src="icone/heart-regular.svg" alt="heart">
+                                <img class="restaurant_article_coeur-plein" src="icone/heart-solid.svg"
+                                    alt="coeur rose">
+                            </div>
                         </div>
                     </figcaption>
                 </figure>
@@ -116,13 +124,16 @@
 
             <a class="restaurant_article" href="le_delice_des_sens.html">
                 <figure class="restaurant_article_conteneur">
-                    <img class="restaurant_article_image"
-                        src="images/les_delice_des_sens.jpg" alt="jay-wennington">
+                    <img class="restaurant_article_image" src="images/les_delice_des_sens.jpg" alt="jay-wennington">
                     <figcaption class="restaurant_article_contenu">
                         <span>Le délice des sens</span>
                         <p>Folie-Méricourt</p>
-                        <div class="coeur_button">
-                            <img class="restaurant_article_coeur" src="icone/heart-regular.svg" alt="heart">
+                        <div class="coeur_article_checkbox">
+                            <div class="coeur_button">
+                                <img class="restaurant_article_coeur" src="icone/heart-regular.svg" alt="heart">
+                                <img class="restaurant_article_coeur-plein" src="icone/heart-solid.svg"
+                                    alt="coeur rose">
+                            </div>
                         </div>
                     </figcaption>
                 </figure>
