--- a/public/index.html
+++ b/public/index.html
@@ -145,17 +145,17 @@
 
 
     <footer class="footer">
-        <img class="footer_logo" src="logo.png" alt="logo_ohmyfood">
+        <img class="footer_logo" src="icone/ohmyfood@2x.svg" alt="logo_ohmyfood">
 
         <ul class="footer_texte">
-            <img src="couvert" alt="">
-            <li><a href="#">Proposer un restaurant</a></li>
-            <li><a href="#">Devenir partenaire</a></li>
+            
+            <li class="footer_texte_item"><a href="#"> <img class="footer_texte_icone" src="icone/couvert.svg" alt="">Proposer un restaurant</a></li>
+            <li class="footer_texte_item"><a href="#"> <img class="footer_texte_icone" src="icone/mains.svg" alt="">Devenir partenaire</a></li>
         </ul>
 
         <ul class="footer_texte">
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Contact</a></li>
+            <li class="footer_texte_item"><a href="#">Mentions légales</a></li>
+            <li class="footer_texte_item"><a href="#">Contact</a></li>
         </ul>
     </footer>
 
